Fix border on smaller screens

--- a/src/components/MazePage/MazePage.module.css
+++ b/src/components/MazePage/MazePage.module.css
@@ -33,12 +33,17 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-right: 3px solid #777979;
   height: 100%;
   padding: 0.4rem;
   font-size: 1.4rem;
 
   p {
     margin: 0.7rem 0;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .pageText {
+    border-right: 3px solid #777979;
   }
 }
